# StereoCrafter

./: .env.example  .gitignore  .gitmodules  README.md  README_depth_splatting.md  README_inpainting.md  _RUN_DepthCrafter_GUI.bat  _RUN_DepthCrafter_GUI_Seg.bat  _RUN_Depth_Splatting_GUI.bat  _RUN_Inpainting_GUI.bat  _RUN_Inpainting_GUI_V2.bat  _RUN_Merging_GUI.bat  _RUN_SidecarEdit_GUI.bat  _RUN_Splatting_GUI.bat  _update.bat  backup.patch  batch_inpainting.py  color_transfer.py  config_depthcrafter.json  convergence_json_tool.py  dc_gui_seg.py  dependencies_update.md  depth_crafter_logic.py  depth_splatting.py  depth_splatting_gui.py  depthcrafter_gui.py  depthcrafter_gui_seg.py  docker-compose.yml  export_fp8_transformer.py  help_content.json  inpaint_help.json  inpainting.py  inpainting_gui.py  inpainting_gui_v2.py  merge_depth_segments.py  merging_gui.py  message_catalog.py  narrative_convergence.py  narrative_convergence_gui.py  pyproject.toml  (+12 more)
1click_installer_script/: StereoCrafter_1click_Installer.bat  StereoCrafter_Manual_Install.md
Forward Warp CUDA (pre-compiled for Python 3.12)/: ReadMe.txt  forward_warp_cuda.cp312-win_amd64.pyd
Forward Warp CUDA (pre-compiled for Python 3.12)/Forward_Warp/: forward_warp.py  forward_warp_padded.py
Forward Warp CUDA (pre-compiled for Python 3.12)/forward_warp-0.0.1.dist-info/: METADATA  RECORD  direct_url.json
Forward Warp CUDA (pre-compiled for Python 3.12)/forward_warp_cuda-0.1.0.dist-info/: METADATA  RECORD  direct_url.json
_install/: StereoCrafter_1click_Installer.bat  StereoCrafter_Manual_Install.md
assets/: inpaint_change_log.md  merger_change_log.md  merger_gui_guide.md  splatting_change_log.md  splatting_gui_guide.md
core/: __init__.py
core/common/: __init__.py  cli_utils.py  encoding_utils.py  file_organizer.py  mesh_warp.py  sidecar_manager.py  theme_manager.py  video_io.py
core/splatting/: __init__.py  analysis_service.py  batch_processing.py  border_scanning.py  config_manager.py  convergence.py  depth_processing.py  forward_warp.py  fusion_export.py  gui_widgets.py  m2s_mask.py  main_gui.py  preview_rendering.py  render_processor.py
core/ui/: __init__.py  dnd_support.py  encoding_settings.py  preview_buffer.py  preview_canvas_window.py  video_previewer.py  widgets.py
dependency/: convergence_estimator.py  inpaint_help.json  merge_help.json  splatter_help.json  stereocrafter_util.py  u2net.py  video_previewer.py
dependency/Forward-Warp/Forward_Warp/cuda/: forward_warp_cuda_kernel.cu
dependency/forward_warp_pytorch/: forward_warp_max_motion_pytorch.py  forward_warp_pytorch.py  forward_warp_rescaled.py
depthcrafter/: attention.py  dav_util.py  depth_crafter_ppl.py  depthcrafter_logic.py  help_content.json  merge_depth_segments.py  utils.py
gui/: app.py
pipelines/: stereo_video_inpainting.py
scripts/Davinci Resolve/Comp/: Control Data Exporter.md  Control Data Exporter.py  Markers to Keyframes.md  Markers to Keyframes.py  Scene_Number_Stamper.md  Scene_Number_Stamper.py  Scene_Number_Stamper_TextPlus.md  Scene_Number_Stamper_TextPlus.py
scripts/Davinci Resolve/Edit/: Add Markers.md  Add Markers.py  Apply_AutoPass_DFW_From_CSV.lua  Export_Markers_To_SRT.md
stereocrafter_ui/depthcrafter/: depthcrafter_ui.py
stereocrafter_ui/inpainting/: inpainting_ui.py
stereocrafter_ui/merging/: merging_ui.py
stereocrafter_ui/splatting/: splatting_ui.py
