[project]
name = "stereocrafter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "decord>=0.6.0",
    "diffusers>=0.36.0",
    "fire>=0.7.1",
    "ftfy==6.3.1",
    # >=0.34 (not 1.x): transformers 4.x requires hub <1.0; 0.34 is where the
    # `hf` CLI (used by the installer/docs) was introduced.
    "huggingface-hub>=0.34",
    "imageio>=2.37.2",
    "imageio-ffmpeg>=0.6.0",
    "imath>=0.0.2",
    "matplotlib>=3.10.8",
    "mediapy>=1.2.7",
    "moderngl>=5.12.0",
    "moviepy>=2.1.1",
    "numpy>=2.1,<3",
    "opencv-python>=4.11.0.86",
    "openexr>=3.4.4",
    "pyperclip>=1.11.0",
    "sageattention",
    "tkinterdnd2>=0.4.3",
    # <0.16: newer torchao removes module paths that diffusers 0.36 hard-imports,
    # breaking ALL diffusers model loading when torchao is merely installed.
    "torchao>=0.13,<0.16",
    # mmgp (GPLv3) powers the V2 GUI's "MMGP streaming" offload mode: quantized
    # int8 streaming with budgeted residency + async shuttle. Pinned to the
    # Wan2GP-proven combination; quanto 0.2.7 requires transformers <5.
    "mmgp==3.7.10",
    "optimum-quanto==0.2.7",
    "torch==2.13.0",
    "torchaudio>=2.9.1",
    "torchvision>=0.28.0",
    # <5: optimum-quanto (mmgp's quantizer) imports transformers 4.x-era symbols;
    # transformers 5.x breaks it. All models used by this suite are 4.x-native.
    "transformers>=4.54,<5",
    "triton-windows>=3.6.0.post25",
    "ttkthemes>=3.3.0",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }
sageattention = { url = "https://github.com/woct0rdho/SageAttention/releases/download/v2.2.0-windows.post6/sageattention-2.2.0%2Bcu130torch2.10.0andhigher.post6-cp310-abi3-win_amd64.whl" }

[tool.ruff]
# Global settings go here
line-length = 120
indent-width = 4  # Moved out of [tool.ruff.format]

[tool.ruff.format]
# Formatter-specific settings go here
indent-style = "space"
skip-magic-trailing-comma = true

[tool.ruff.lint]
# Linter-specific settings go here
ignore = ["E501"]
select = ["E", "F", "W"]
unfixable = ["F841"]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]
